NAS4Free 10.1.0.2 - Prescience
------------------------------

Changes:
- Upgrade to FreeBSD 10.1 RELEASE p9.
- Add Home, Insert, Delete, End, Page Up/Down keys to shell.
- Increase upload size in Webserver service up to 16GiB. (websrv_maxrequestsize)
- Upgrade php to 5.6.8.
- Upgrade tzdata to 2015d.
- Upgrade mDNSResponder to 567.
- Upgrade msmtp to 1.6.2.

Fixes:
- broken extension menu in filemanager.
- missing translation in OPT/LAN interface.
- AFP share is not shown in Time Machine.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
